test and prd version

--- a/product.tmpl
+++ b/product.tmpl
@@ -1,6 +1,6 @@
 {
   "info": {
-    "version": "1.0.0",
+    "version": "PRD_VERSION",
     "title": "API_YAML_FILE_NAME-prd",
     "name": "API_YAML_FILE_NAME-prd",
     "summary": "automated product generation for the API",
