--- a/product.tmpl
+++ b/product.tmpl
@@ -1,6 +1,6 @@
 {
   "info": {
-    "version": "PRD_VERSION",
+    "version": "API_VERSION",
     "title": "API_YAML_FILE_NAME-prd",
     "name": "API_YAML_FILE_NAME-prd",
     "summary": "automated product generation for the API",
@@ -29,7 +29,7 @@
   "product": "1.0.0",
   "apis": {
     "API_YAML_FILE_NAME": {
-      "name": "API_YAML_FILE_NAME:1.0.0"
+      "name": "API_YAML_FILE_NAME:API_VERSION"
     }
   }
 }
